fix: uses pymssql now

--- a/base_external_mssql/views/base_external_mssql.xml
+++ b/base_external_mssql/views/base_external_mssql.xml
@@ -11,6 +11,7 @@
                 <field name="name" />
                 <field name="server" />
                 <field name="database" />
+                <field name="driver" />
             </tree>
         </field>
     </record>
@@ -27,6 +28,7 @@
                         <group>
                             <field name="name" />
                             <field name="server" />
+                            <field name="driver" />
                         </group>
                     </group>
                     <group col="1">
