--- a/prometheus_exporter/views/ir_metric.xml
+++ b/prometheus_exporter/views/ir_metric.xml
@@ -4,14 +4,14 @@
         <field name="name">prometheus_exporter.view_tree</field>
         <field name="model">ir.metric</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name" />
                 <field name="description" />
-                <field name="type" />
+                <field name="metric_type" />
                 <field name="model_id" />
                 <field name="domain" />
                 <field name="field_id" />
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -24,7 +24,7 @@
                     <group>
                         <field name="name" />
                         <field name="description" />
-                        <field name="type" />
+                        <field name="metric_type" />
                         <field name="model_id" />
                         <field name="model" invisible="1" />
                         <field
@@ -43,7 +43,7 @@
     <record id="ir_metric_act" model="ir.actions.act_window">
         <field name="name">Metrics</field>
         <field name="res_model">ir.metric</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <menuitem
